I fixed the gaph part for the dashboard :)

--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,6 @@
 }
 
 .graph-container {
-  width: 100%;
-  height: 100%;
+  width: 500px;
+  height: 500px;
 }
